fixed card delay bug, added reset functionality, added max-width on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,8 @@ h1 {
 
 main {
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
   position: relative;
   padding: 20px 5px;
 }
@@ -80,6 +82,7 @@ ul {
   padding: 0;
   height: 100%;
   width: 100%;
+  max-width: 375px;
   object-fit: contain;
   /* object-fit: fill; */
   /* position: relative; */
